frontend/test/should_fail/method_model_inh_ovrrd_failxp.grg
#using "method_model_inh_ovrrd_failxp.gm"
